crates/python_parser/tests/snapshots/invalid_syntax@if_stmt_invalid_elif_test_expr.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/if_stmt_invalid_elif_test_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..56,
        body: [
            If(
                IfStmt {
                    range: 0..55,
                    test: Name(
                        NameExpr {
                            range: 3..4,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Pass(
                            PassStmt {
                                range: 10..14,
                            },
                        ),
                    ],
                    elif_else_clauses: [
                        ElifElseClause {
                            range: 15..32,
                            test: Some(
                                Starred(
                                    StarredExpr {
                                        range: 20..22,
                                        value: Name(
                                            NameExpr {
                                                range: 21..22,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            body: [
                                Pass(
                                    PassStmt {
                                        range: 28..32,
                                    },
                                ),
                            ],
                        },
                        ElifElseClause {
                            range: 33..55,
                            test: Some(
                                Yield(
                                    YieldExpr {
                                        range: 38..45,
                                        value: Some(
                                            Name(
                                                NameExpr {
                                                    range: 44..45,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            body: [
                                Pass(
                                    PassStmt {
                                        range: 51..55,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | if x:
2 |     pass
3 | elif *x:
  |      ^^ Syntax Error: Starred expression cannot be used here
4 |     pass
5 | elif yield x:
  |


  |
3 | elif *x:
4 |     pass
5 | elif yield x:
  |      ^^^^^^^ Syntax Error: Yield expression cannot be used here
6 |     pass
  |
